--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react-native": "^0.4.4",
     "react-native-icons": "0.0.7",
-    "react-native-navbar": "^0.5.0"
+    "react-native-navbar": "^0.5.0",
+    "react-native-segmented-view": "^1.0.1"
   }
 }
