--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react-native": "^0.4.4",
     "react-native-icons": "0.0.7",
     "react-native-navbar": "^0.5.0",
-    "react-native-segmented-view": "^1.0.1"
+    "react-native-segmented-view": "^1.0.1",
+    "tcomb": "^1.0.3",
+    "tcomb-form-native": "^0.1.8",
+    "tcomb-validation": "^1.0.4"
   }
 }
