--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "dependencies": {
     "react-native": "^0.4.4",
     "react-native-icons": "0.0.7",
+    "react-native-keyboardevents": "^0.3.5",
     "react-native-navbar": "^0.5.0",
     "react-native-segmented-view": "^1.0.1",
+    "react-native-side-menu": "^0.7.1",
     "tcomb": "^1.0.3",
     "tcomb-form-native": "^0.1.8",
     "tcomb-validation": "^1.0.4"
